# mdtk

./: .gitignore  README.md  Setup.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
src/mdtk/: bookmarks.py
tests/: test_bookmarks.py
