[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mdtk"
dynamic = ["version"]
description = "Markdown Toolkit - Tools for working with markdown files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "beautifulsoup4",
]

[project.urls]
Documentation = "https://tommcd.github.io/mdtk"
Repository = "https://github.com/tommcd/mdtk"
Changelog = "https://github.com/tommcd/mdtk/releases"
Issues = "https://github.com/tommcd/mdtk/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
]

[tool.setuptools_scm]
write_to = "src/mdtk/_version.py"

[project.scripts]
mdtk-bookmarks = "mdtk.bookmarks:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py38"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,py312,py313
isolated_build = True

[testenv]
deps =
    pytest
    beautifulsoup4
    ruff
commands =
    ruff check .
    ruff format --check .
    pytest {posargs:tests}
"""
